# FinAnalysis

./: .gitignore  LICENSE  README.md  pyproject.toml
analysis/: notebook.ipynb
src/: weekly_vs_monthly_investment.py
