[tool.poetry]
name = "finanalysis"
version = "0.1.0"
description = ""
authors = ["Cyprien Calmels <cyprien.calmels@proton.me>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
